Add sequelize dependencies
This adds three new project dependencies to package.json:

1. sequelize :: We'll be using sequelize for migrations and as our ORM.
2. pg :: We'll be using postgres as our database.  Sequelize requires
   the pg package in order to work with postgres.
3. dotenv :: DB connection configuration will be handled through
   environment variables and / or .env files.

Issue #17

--- a/package.json
+++ b/package.json
@@ -29,5 +29,10 @@
     "eslint-plugin-react": "^7.12.4",
     "nodemon": "^1.19.0",
     "parcel": "^1.12.3"
+  },
+  "dependencies": {
+    "dotenv": "^8.0.0",
+    "pg": "^7.10.0",
+    "sequelize": "^5.8.5"
   }
 }
