Add `yarn migrate` command
This got left out of #38 also, so `yarn migrate` did nothing. Well, it
complained loudly, but that’s not the good sort of thing.

Affects #17

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "start": "concurrently 'yarn start-node' 'yarn parcel:dev'",
     "build": "babel src -d lib",
     "lint": "./node_modules/.bin/eslint 'src/**/*.js'",
-    "test": ""
+    "test": "",
+    "migrate": "sequelize db:migrate"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
