Create queue infrastructure
This commit sets the stage for our queue system, which will live inside
of `src/server/queues`.  Some of the key infrastructure points:

* Queue factories: Queues in our system are created through
a QueueFactory, which must extend `AbstractQueueFactory` and override
the name and processor location.

* Queue schedulers: Whe want to regularly schedule certain queues when
in production.  All queues must have a schedule (the schedule can be
NONE). Schedules are defined in the Schedules constant in
`queues/index.js`

* Queue processors: As already established in a previous commit, our
queues will be processed using named processors.  The processor will
live in the same directory as the factory.

This also adds two new yarn scripts:

* `queue:jobs:schedule` will schedule the queues.
* `queue:jobs:unschedule` will unschedule the queues.
* `queue:jobs:list` will list the currently scheduled jobs.

This also adds two new environment variables:

* REDIS_URL - this is the URL of the redis instance, which is necessary
for the queue to work.  If this is not set then bull currently defaults
to localhost and the default redis port.

* ENABLED_QUEUE_DIRECTORIES - this is a list of queue directories that
should be loaded when the application starts.  A wildcard (*) will load
all valid queues

Issue #20
Issue #43

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,12 @@
 DATABASE_URL_PRODUCTION=postgresql://username:password@localhost/dbname
 DATABASE_URL_DEVELOPMENT=postgresql://username:password@localhost/dbname
 DATABASE_URL_TEST=postgresql://username:password@localhost/dbname
+
+REDIS_URL=redis://127.0.0.1:6379
+
+# A comma separated list of queue directories (subdirectories in src/server/queues()
+# These directories must be properly define all needed queue components, as described
+# in the project documentation.
+#
+# A value of `*` will load all queues.
+ENABLED_QUEUE_DIRECTORIES=*
