Add mailer, newsletter, and queue
This is a massive commit that I’m totally going to have to break up into smaller pieces and probably two PRs. For now I’m just getting it off my machine in case of bus.

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,10 @@ REDIS_URL=redis://127.0.0.1:6379
 #
 # A value of `*` will load all queues.
 ENABLED_QUEUE_DIRECTORIES=*
+
+# Mailer settings
+# (Get these from Mailgun)
+MAILER_FROM_ADDRESS='Visible Name <email@address.com>'
+MAILER_API_DOMAIN=domain.org
+MAILER_API_URL=https://api.mailgun.net/v3/domain.org
+MAILER_API_KEY=ABC123
