Add mailer and tests
* Create a generic `Mailer` class that interacts with the Mailgun API
  using the `mailgun-js` npm package
* Provide test coverage for `Mailer` and its utilities
* Provide a sample send-email script, called via `yarn mailer:send-test`
  with an email address provided via the `-r` parameter, e.g.
  `yarn mailer:send-test -r test@test.com`

Affects #22

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "queue:jobs:list": "babel-node -- src/scripts/listScheduledJobs",
     "queue:jobs:schedule": "babel-node -- src/scripts/scheduleJobs",
     "queue:jobs:unschedule": "babel-node -- src/scripts/unscheduleJobs",
-    "queue:jobs:run:cnn-portal-crawler": "babel-node -- src/scripts/runCrawler"
+    "queue:jobs:run:cnn-portal-crawler": "babel-node -- src/scripts/runCrawler",
+    "mailer:send-test": "babel-node -- src/scripts/sendTestEmail"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
@@ -42,6 +43,7 @@
     "bull": "^3.9.1",
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.0.0",
+    "mailgun-js": "^0.22.0",
     "pg": "^7.10.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
