--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "queue:jobs:list": "babel-node -- src/scripts/listScheduledJobs",
     "queue:jobs:schedule": "babel-node -- src/scripts/scheduleJobs",
     "queue:jobs:unschedule": "babel-node -- src/scripts/unscheduleJobs",
-    "mailer:send-test": "babel-node -- src/scripts/sendTestEmail"
+    "mailer:send-test": "babel-node -- src/scripts/sendTestEmail",
+    "newsletter:send-test": "babel-node -- src/scripts/sendTestNewsletter"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
@@ -41,6 +42,7 @@
   "dependencies": {
     "bull": "^3.9.1",
     "cheerio": "^1.0.0-rc.3",
+    "dayjs": "^1.8.14",
     "dotenv": "^8.0.0",
     "mailgun-js": "^0.22.0",
     "pg": "^7.10.0",
