Add ability to kick off the crawler manually
This is the very beginning of a yarn script that will add to the crawl
queue.  Eventually this should be changed into a more generic queue
testing framework that lets us add jobs to any queues so we can test our
flows directly as we modify them.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "migrate": "sequelize db:migrate",
     "queue:jobs:list": "babel-node -- src/scripts/listScheduledJobs",
     "queue:jobs:schedule": "babel-node -- src/scripts/scheduleJobs",
-    "queue:jobs:unschedule": "babel-node -- src/scripts/unscheduleJobs"
+    "queue:jobs:unschedule": "babel-node -- src/scripts/unscheduleJobs",
+    "queue:jobs:run:cnn-portal-crawler": "babel-node -- src/scripts/runCrawler"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
