Add winston as a dependency
[Winston](https://www.npmjs.com/package/winston) is a framework for
logging with a lot of customization options around formatting,
transportation layers, and log levels.  We picked it because it's robust
and very used (3m downloads a week)

Issue #34

--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "pg": "^7.10.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
-    "sequelize": "^5.8.5"
+    "sequelize": "^5.8.5",
+    "winston": "^3.2.1"
   },
   "jest": {
     "cacheDirectory": "./.jestcache"
