Rename Mailgun-specific env vars
Per feedback by @slifty, distinguish generic mailer vars from
Mailgun-specific vars.

Affects #22

--- a/.env.example
+++ b/.env.example
@@ -13,9 +13,11 @@ REDIS_URL=redis://127.0.0.1:6379
 # A value of `*` will load all queues.
 ENABLED_QUEUE_DIRECTORIES=*
 
-# Mailer settings
-# (Get these from Mailgun)
+# Generic mailer settings
 MAILER_FROM_ADDRESS='Visible Name <email@address.com>'
-MAILER_API_DOMAIN=domain.org
-MAILER_API_URL=https://api.mailgun.net/v3/domain.org
-MAILER_API_KEY=ABC123
+
+# Mailgun-specific settings
+# (Get these from Mailgun)
+MAILGUN_API_DOMAIN=domain.org
+MAILGUN_API_URL=https://api.mailgun.net/v3/domain.org
+MAILGUN_API_KEY=ABC123
