Remove env variable descriptions from README
We already document these in the `.env.example` file, so it’s redundant
and rigid to do so in the README.

Included in this PR because otherwise I should add the new
Mailer-related env vars to the README, and I don’t wanna.

Affects #22

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-# Database connection strings
-
+# PostgreSQL connection settings
 DATABASE_URL_PRODUCTION=postgresql://username:password@localhost/dbname
 DATABASE_URL_DEVELOPMENT=postgresql://username:password@localhost/dbname
 DATABASE_URL_TEST=postgresql://username:password@localhost/dbname
 
+# Redis connection settings
 REDIS_URL=redis://127.0.0.1:6379
 
 # A comma separated list of queue directories (subdirectories in src/server/queues()
