Add redis to the project
This system already required redis in order to operate, since redis is
what we use for queues.  This makes it possible to interact with redis
in our application.

Issue #66

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "dotenv": "^8.0.0",
     "mailgun-js": "^0.22.0",
     "pg": "^7.10.0",
+    "redis": "^2.8.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "sequelize": "^5.8.5",
