Allow debug log levels
This creates an optional LOG_LEVEL environment variable which can be set
to any valid winston log level.  Specifically, it makes it possible to
reveal debug level logs.

This also fixes a bug where the stack trace would render as undefined
when no stack trace existd.

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,7 @@ MAILER_FROM_ADDRESS='Visible Name <email@address.com>'
 MAILGUN_API_DOMAIN=domain.org
 MAILGUN_API_URL=https://api.mailgun.net/v3/domain.org
 MAILGUN_API_KEY=ABC123
+
+# The amount of detail you want to appear in logs
+# We use the default npm log levels as described in https://github.com/winstonjs/winston#logging-levels
+LOG_LEVEL=info
