Don’t do verbose coverage testing on CI
CI doesn’t benefit from coverage testing or verbose results, so
configure Travis to use a special version without those options.

Affects #69

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint": "./node_modules/.bin/eslint 'src/**/*.js'",
     "test": "jest --verbose --coverage",
     "test:watch": "jest --verbose --watch",
+    "test:ci": "jest",
     "migrate": "sequelize db:migrate",
     "queue:jobs:list": "babel-node -- src/scripts/listScheduledJobs",
     "queue:jobs:schedule": "babel-node -- src/scripts/scheduleJobs",
