Add real mailing list addresses
* Update `.env.example` with confirmed sending domains and info
* Add mailing list name/address constants
* Configure newsletters to associate with a mailing list instead of
  providing a brittle newsletter address
* Programmatically generate the mailing list email address using the
  configured domain and the mailing list constants
* Add a test for composing mailing list emails

Affects #23

--- a/.env.example
+++ b/.env.example
@@ -14,10 +14,10 @@ REDIS_URL=redis://127.0.0.1:6379
 ENABLED_QUEUE_DIRECTORIES=*
 
 # Generic mailer settings
-MAILER_FROM_ADDRESS='Visible Name <email@address.com>'
+MAILER_FROM_ADDRESS='Tech & Check Alerts <alerts@factstream.co>'
 
 # Mailgun-specific settings
 # (Get these from Mailgun)
-MAILGUN_API_DOMAIN=domain.org
-MAILGUN_API_URL=https://api.mailgun.net/v3/domain.org
+MAILGUN_API_DOMAIN=alerts.factstream.co
+MAILGUN_API_URL=https://api.mailgun.net/v3/alerts.factstream.co
 MAILGUN_API_KEY=ABC123
