--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/node": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
+    "@babel/register": "^7.4.4",
     "babel-eslint": "^10.0.1",
     "concurrently": "^4.1.0",
     "eslint": "^5.16.0",
