--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "redis": "^2.8.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
+    "sanitize-html": "^1.20.1",
     "sequelize": "^5.8.5",
     "winston": "^3.2.1"
   },
