Inline CSS during HTML template rendering
We now pass the rendered HTML template through Juice, which inlines the
CSS styles directly on target elements, making the resulting markup
compatible with a much wider array of email clients.

This makes me excited. Not the bloat it adds to our newsletter markup;
that makes me sad. But the fact that in so little code, it solves so
many email client problems (that we’ve found thus far).

Affects #90

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "dayjs": "^1.8.14",
     "dotenv": "^8.0.0",
     "handlebars": "^4.1.2",
+    "juice": "^5.2.0",
     "mailgun-js": "^0.22.0",
     "pg": "^7.10.0",
     "redis": "^2.8.0",
