--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "queue:jobs:run:cnn-portal-crawler": "babel-node -- src/scripts/runCrawler",
     "mailer:send-test": "babel-node -- src/scripts/sendTestEmail",
     "newsletter:send-test": "babel-node -- src/scripts/sendTestNewsletter",
-    "sandbox": "babel-node -- src/scripts/_sandbox"
+    "sandbox": "babel-node -- src/scripts/_sandbox",
+    "scraper:cnn": "babel-node -- src/scripts/scrapeCnnStatements"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
