--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "queue:jobs:unschedule": "babel-node -- src/scripts/unscheduleJobs",
     "queue:jobs:run:cnn-portal-crawler": "babel-node -- src/scripts/runCrawler",
     "mailer:send-test": "babel-node -- src/scripts/sendTestEmail",
-    "newsletter:send-test": "babel-node -- src/scripts/sendTestNewsletter"
+    "newsletter:send-test": "babel-node -- src/scripts/sendTestNewsletter",
+    "sandbox": "babel-node -- src/scripts/_sandbox"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
