Allow envs to set a global mailing list override
We gain a new .env example (`MAILING_LIST_OVERRIDE `) that, when
configured, replaces the newsletter-specific mailing list configuration.

This mostly exists to let us setup otherwise-production environments
that are globally configured to send only to internal mailing lists
until otherwise let off the leash to send to their true configured
mailing lists.

NB: This still has the old guards that won’t let us accidentally
configure local development environments to send to the real lists.
(Or, it shouldn’t. I’m scared to test.) If you ever want to do that,
you will have to manually get in there and remove the guards and may
God have mercy on your soul.

Affects #138

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,8 @@ MAILGUN_API_KEY=ABC123
 # The amount of detail you want to appear in logs
 # We use the default npm log levels as described in https://github.com/winstonjs/winston#logging-levels
 LOG_LEVEL=info
+
+# To force all newsletters to send to a specific mailing list (e.g., if we want to run a production
+# environment but have all newsletters sent to testers only), uncomment this and set it to the
+# desired `MAILING_LISTS` key, e.g. `TESTERS`.
+# MAILING_LIST_OVERRIDE=
