Add scrape date horizon
This creates a new environment variable called SCRAPE_DAY_HORIZON which
is the number of days in the past that all statement scrapers should look.

This should not change the behavior of the scrapers themselves, but
rather should be leveraged by the worker pipeline when deciding which
scrapes to request.

Right now there is only one scraper pipeline implemented (cnn
transcripts) and this is implemented in that pipeline.

Issue #136

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,6 @@ MAILGUN_API_KEY=ABC123
 # The amount of detail you want to appear in logs
 # We use the default npm log levels as described in https://github.com/winstonjs/winston#logging-levels
 LOG_LEVEL=info
+
+# The number of days backwards the scraper should look
+SCRAPE_DAY_HORIZON=3
