--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "handlebars": "^4.1.2",
     "juice": "^5.2.0",
     "mailgun-js": "^0.22.0",
+    "memoize-one": "^5.1.1",
     "pg": "^7.10.0",
     "redis": "^2.8.0",
     "request": "^2.88.0",
