Update .env.example with `NODE_ENV` placeholder
We have to set `NODE_ENV` manually in certain environments, like
production it seems. Go ahead and add it to `.env.example` as an
optional variable.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
+# If operating in an environment where NODE_ENV isn't automatically set by the script runner,
+# uncomment this and set it to the appropriate environment string. (Make sure to use a matching
+# value from `src/server/constants.js ENV_NAMES`, e.g. "production".)
+# NODE_ENV=
+
 # PostgreSQL connection settings
 DATABASE_URL_PRODUCTION=postgresql://username:password@localhost/dbname
 DATABASE_URL_DEVELOPMENT=postgresql://username:password@localhost/dbname
