--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "juice": "^5.2.0",
     "mailgun-js": "^0.22.0",
     "memoize-one": "^5.1.1",
+    "oauth": "^0.9.15",
     "pg": "^7.10.0",
     "redis": "^2.8.0",
     "request": "^2.88.0",
