Add the TwitterStatementScraper
The TwitterStatementScraper takes a twitter handle and converts that
user's most recent tweets into Statements.

For now we are not normalizing the user names according to the
internally managed spreadsheet (e.g. if a user changes their twitter
name it will result in a different statement / claim)

This commit also does not invoke the twitter scraper as part of the
scraper pipeline.

Issue #26

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,10 @@ SCRAPE_DAY_HORIZON=3
 # environment but have all newsletters sent to testers only), uncomment this and set it to the
 # desired `MAILING_LISTS` key, e.g. `TESTERS`.
 # MAILING_LIST_OVERRIDE=
+
+# Twitter-specific settings
+TWITTER_OAUTH_TOKEN=
+TWITTER_OAUTH_TOKEN_SECRET=
+TWITTER_CONSUMER_KEY=
+TWITTER_CONSUMER_SECRET=
+
