Add twitter scraper test script
You can now test the twitter statement scraper by typing:

`yarn scrape:twitter -u HANDLE`

This also renames the CNN scrape utility call to be consistent with the
"scrape" verb rather than "scraper" noun

Issue #26

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mailer:send-test": "babel-node -- src/scripts/sendTestEmail",
     "newsletter:send-test": "babel-node -- src/scripts/sendTestNewsletter",
     "sandbox": "babel-node -- src/scripts/_sandbox",
-    "scraper:cnn": "babel-node -- src/scripts/scrapeCnnStatements"
+    "scrape:cnn": "babel-node -- src/scripts/scrapeCnnStatements",
+    "scrape:twitter": "babel-node -- src/scripts/scrapeTwitterStatements"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
