Add cnn test generation utility
The CNN scraper is a full blown content manipulation pipeline, and
issues with the final result, while relatively to address and debug, are
hard to translate into a meaningful test that respects the full
pipeline.

Ultimately we want to be able to write a test that follows each step of
the transformation from a challanging transcript.  This utility script
will take in a transcript URL and then output each transformation step
into a format that automated tests can later pick up.

To run the script you type:

yarn generate:test:cnn -u http://transcipt.cnn.com/continuehere

Issue 127

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "newsletter:send-test": "babel-node -- src/scripts/sendTestNewsletter",
     "sandbox": "babel-node -- src/scripts/_sandbox",
     "scrape:cnn": "babel-node -- src/scripts/scrapeCnnStatements",
-    "scrape:twitter": "babel-node -- src/scripts/scrapeTwitterStatements"
+    "scrape:twitter": "babel-node -- src/scripts/scrapeTwitterStatements",
+    "generate:test:cnn": "babel-node -- src/scripts/generateCnnUtilTest"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
