Remove identity flags
We may want to add identity back some day so this script is easier to
run locally, but for now that isn't a primary use case and it was
causing issues as-implemented within the primary use case (e.g. when
being invoked on Travis).

This removes the code supporting the explicit passage of an identity
file in the travis script.

Issue #275

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ node_js:
 deploy:
   - provider: script
     script:
-      bash scripts/deliver.sh -i deploy_key -h $STAGING_SERVER -u $STAGING_SERVER_USER bash &&
+      bash scripts/deliver.sh -h $STAGING_SERVER -u $STAGING_SERVER_USER bash &&
       ssh $STAGING_SERVER_USER@$STAGING_SERVER 'cd /var/www/tech-and-check-alerts &&
       ./scripts/deploy.sh'
     on:
