Rename deploy script
Deploy implies a bit more than what this script was actually responsible
for (which is to prepare and re-start the server with the new code base
and migration set).

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,6 @@ deploy:
     script:
       bash scripts/deliver.sh -h $STAGING_SERVER -u $STAGING_SERVER_USER bash &&
       ssh $STAGING_SERVER_USER@$STAGING_SERVER 'cd /var/www/tech-and-check-alerts &&
-      ./scripts/deploy.sh'
+      ./scripts/buildAndStart.sh'
     on:
       branch: "$STAGING_BRANCH"
