--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "bull": "^3.9.1",
     "cheerio": "^1.0.0-rc.3",
+    "csv-parse": "^4.8.2",
     "dayjs": "^1.8.14",
     "dotenv": "^8.0.0",
     "handlebars": "^4.1.2",
