Add travis database support
In prepartion for integration tests we need to spin up psql on our
travis instances.

This only creates the test database (although travis is required to have
a configured value for all databases.)  This is because only the test
databse will ever actually be utilized by travis.

Issue #317

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: node_js
 
+services:
+  - postgresql
+
 before_script:
   - echo "Host $STAGING_SERVER" >> ~/.ssh/config
   - echo "StrictHostKeyChecking no" >> ~/.ssh/config
+  - psql -c 'create database alerts_test;' -U postgres
 
 script:
   - npm run lint
