Close database connections after tests
Tests that at any point loaded models (even by loading code that loads
models) would hang after completing because the SQL connection never
closed.

After a whole lot of research, it became clear that this was going to
require a manual closing of sequelize connections.  Jest provides
a globalTeardown configuraiton which is run after ALL tests, however
this doesn't do the trick because each Jest thread would open its own
pool (and globalTeardown actually ended up running in its own thread).

It seems the only way to close connections after a test suite is to use
the afterAll() Jest global.  Luckily it is possible to configure Jest to
run a universal setup file before each test suite, rather than having to
manually create a redundant afterAll() method in every test file.

This commit adds that setup file.

Issue #317

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "concurrently 'yarn start-node' 'yarn parcel:dev'",
     "build": "babel src -d lib",
     "lint": "./node_modules/.bin/eslint 'src/**/*.js'",
+    "pretest": "NODE_ENV=test yarn migrate",
     "test": "jest",
     "test:watch": "jest --verbose --watch",
     "migrate": "sequelize db:migrate",
@@ -69,6 +70,7 @@
     "winston": "^3.2.1"
   },
   "jest": {
-    "cacheDirectory": "./.jestcache"
+    "cacheDirectory": "./.jestcache",
+    "setupFilesAfterEnv": ["./src/test/suiteSetup.js"]
   }
 }
