what if it's the wrong db name

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ addons:
 before_script:
   - echo "Host $STAGING_SERVER" >> ~/.ssh/config
   - echo "StrictHostKeyChecking no" >> ~/.ssh/config
-  - psql -c 'create database alerts_test;' -U postgres
+  - psql -c 'create database alerts_test2;' -U postgres
 
 script:
   - npm run lint
