--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ addons:
 before_script:
   - echo "Host $STAGING_SERVER" >> ~/.ssh/config
   - echo "StrictHostKeyChecking no" >> ~/.ssh/config
-  - psql -c 'create database alerts_test;' -U postgres
+  - psql -c 'create database $DATABASE_URL_TEST;' -U postgres
 
 script:
   - npm run lint
-  - npm run test:ci
+  - npm run test
 
 before_deploy:
   - openssl aes-256-cbc -K $encrypted_fb9daac17ce1_key -iv $encrypted_fb9daac17ce1_iv
