Remove test:ci command
When we set up CI we added a `test:ci` command.  This was because our
normal test command was set to use --verbose, and we didn't need all
that noise in our CI.

The issue is that `test` is actually a special command, which will
invoke `pretest` automatically.  We want our CI to benefit from these
hooks.

The other problem, by the way, is that --verbose is super noisy
everywhere including on dev and so we actually shouldn't be forcing it
to be flagged every time we want to run `yarn test` anyway.

This removes `test:ci` and makes `test` less noisy.

Issue #317

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_script:
 
 script:
   - npm run lint
-  - npm run test:ci
+  - npm run test
 
 before_deploy:
   - openssl aes-256-cbc -K $encrypted_fb9daac17ce1_key -iv $encrypted_fb9daac17ce1_iv
