--- a/.travis.yml
+++ b/.travis.yml
@@ -23,13 +23,17 @@ node_js:
   - 10
   - node
 
-deploy:
-  - provider: script
-    script:
-      bash scripts/deliver.sh -h $STAGING_SERVER -u $STAGING_SERVER_USER bash &&
-      ssh $STAGING_SERVER_USER@$STAGING_SERVER '
-        cd /var/www/tech-and-check-alerts &&
-        ./scripts/build.sh &&
-        ./scripts/start.sh'
-    on:
-      branch: "$STAGING_BRANCH"
+jobs:
+  include:
+    - stage: deploy
+      script: skip
+      deploy:
+        - provider: script
+          script:
+            bash scripts/deliver.sh -h $STAGING_SERVER -u $STAGING_SERVER_USER bash &&
+            ssh $STAGING_SERVER_USER@$STAGING_SERVER '
+              cd /var/www/tech-and-check-alerts &&
+              ./scripts/build.sh &&
+              ./scripts/start.sh'
+          on:
+            branch: "$STAGING_BRANCH"
