Implement dynamic newsletters
Newsletters used to be driven by constants and static templates. This
meant that adding a newsletter would involve:

1. Adding new twitter list constants.
2. Adding a new newletter handlebars template.
3. Adding a new newsletter worker.
4. Adding a new newsletter delivery queue.

This was acceptable when we only had two, but now it's clear we want to
be able to set up newsletters for a wider variety of locations.

This commit changes the way newsletters are generated so that the
variable portion (e.g. twitter lists, boilerplate language, email
subject) is driven by the database.  This allows us to use a single
queue, worker, and template.

This commit includes some sample newsletter seeds which can be
optionally installed.

Issue #360

--- a/.env.template
+++ b/.env.template
@@ -11,7 +11,7 @@ DATABASE_URL_TEST=postgres://username:password@localhost/dbname
 # Redis connection settings
 REDIS_URL=redis://127.0.0.1:6379
 
-# A comma separated list of queue directories (subdirectories in src/server/queues()
+# A comma-separated list of queue directories (subdirectories in src/server/queues()
 # These directories must be properly define all needed queue components, as described
 # in the project documentation.
 #
@@ -33,8 +33,16 @@ SCRAPE_DAY_HORIZON=3
 
 # To force all newsletters to send to a specific mailing list (e.g., if we want to run a production
 # environment but have all newsletters sent to testers only), uncomment this and set it to the
-# desired `MAILING_LISTS` key, e.g. `TESTERS`.
-# MAILING_LIST_OVERRIDE=
+# desired target email address, e.g. `dev@alerts.factstream.co`.
+#
+# MAILING_LIST_ADDRESS_OVERRIDE=
+
+# To ensure that newsletters are never accidentally sent to the outside world during testing, this
+# comma separated list of internal mailing addresses is used on non-production environments
+# to prevent emails sent to any address not on this safelist.
+#
+# Never put an email address here that you would not want to receive test messages.
+TEST_SAFE_MAILING_LIST_ADDRESSES=
 
 # Twitter-specific settings
 TWITTER_OAUTH_TOKEN=
